# hackerrank

./: .gitignore  README.md
basic-datatypes/: CMakeLists.txt  compile_commands.json  main.cpp
basic-datatypes/test/: CMakeLists.txt
basic-datatypes/test/testsuits/: basic-datatypes_test.cpp
conditions/: CMakeLists.txt  conditions.cpp
conditions/test/: CMakeLists.txt
conditions/test/testsuits/: conditions_test.cpp
cpp-template/: main.cpp
helloworld/: main.cpp
helloworld/lib/: CMakeLists.txt
helloworld/test/: CMakeLists.txt
helloworld/test/testsuits/: helloWorld_test.cpp
input-output/: CMakeLists.txt  input-output.cpp
input-output/lib/: CMakeLists.txt
input-output/lib/myMath/: CMakeLists.txt  myMath.cpp  myMath.hpp
input-output/test/: CMakeLists.txt
input-output/test/testsuits/: input-output_test.cpp
loops/: CMakeLists.txt  loops.cpp
loops/test/: CMakeLists.txt
loops/test/testsuits/: loops_tests.cpp
sets-stl/: CMakeLists.txt  sets-stl.cpp
sets-stl/lib/: CMakeLists.txt
sets-stl/lib/set-operations/: CMakeLists.txt  set-operations.cpp  set-operations.hpp
sets-stl/lib/set-operations/test/: CMakeLists.txt
sets-stl/lib/set-operations/test/testsuits/: set-operations_tests.cpp
sets-stl/test/: CMakeLists.txt
sets-stl/test/testsuits/: sets-stl_tests.cpp
