######################################################################
# @author      : worldpotato (worldpotato)
# @file        : CMakeLists
# @created     : Thursday Jan 14, 2021 19:24:36 CET
######################################################################
if (TARGET gtest)
    add_subdirectory(googletest)
endif()
add_subdirectory(set-operations)

